syntax = "proto3";
package lbm.foundation.v1;

option go_package = "github.com/line/lbm-sdk/x/foundation";

import "lbm/base/query/v1/pagination.proto";
import "google/api/annotations.proto";
import "lbm/foundation/v1/foundation.proto";
import "lbm/base/v1/coin.proto";

import "gogoproto/gogo.proto";

// Query defines the gRPC querier service for foundation module.
service Query {
  // Params queries the module params.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/lbm/foundation/v1/params";
  }

  // ValidatorAuth queries authorization info of a validator.
  rpc ValidatorAuth(QueryValidatorAuthRequest) returns (QueryValidatorAuthResponse) {
    option (google.api.http).get = "/lbm/foundation/v1/validators/{validator_address}";
  }

  // ValidatorAuths queries authorization infos of validators.
  rpc ValidatorAuths(QueryValidatorAuthsRequest) returns (QueryValidatorAuthsResponse) {
    option (google.api.http).get = "/lbm/foundation/v1/validators";
  }

  // Treasury queries the foundation treasury.
  rpc Treasury(QueryTreasuryRequest) returns (QueryTreasuryResponse) {
    option (google.api.http).get = "/lbm/foundation/v1/treasury";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  Params params = 1;
}

// QueryValidatorAuthRequest is the request type for the
// Query/ValidatorAuth RPC method.
message QueryValidatorAuthRequest {
  // validator_address defines the validator address to query for.
  string validator_address = 1;
}

// QueryValidatorAuthResponse is the request type for the
// Query/ValidatorAuth RPC method.
message QueryValidatorAuthResponse {
  ValidatorAuth auth = 1;
}

// QueryValidatorAuthsRequest is the request type for the
// Query/ValidatorAuths RPC method.
message QueryValidatorAuthsRequest {
  // pagination defines an optional pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 1;
}

// QueryValidatorAuthsResponse is the response type for the
// Query/ValidatorAuths RPC method.
message QueryValidatorAuthsResponse {
  repeated ValidatorAuth auths = 1;

  // pagination defines the pagination in the response.
  lbm.base.query.v1.PageResponse pagination = 2;
}

// QueryTreasuryRequest is the request type for the
// Query/Treasury RPC method.
message QueryTreasuryRequest {}

// QueryTreasuryResponse is the response type for the
// Query/Treasury RPC method.
message QueryTreasuryResponse {
  repeated lbm.base.v1.Coin amount = 1
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/line/lbm-sdk/types.Coins"];
}
